# label-lens

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/: label_lens.duckdb  product_images.json
data/briefs/: E102.md  E104.md  E110.md  E122.md  E124.md  E127.md  E129.md  E131.md  E132.md  E133.md  E171.md  E210.md  E211.md  E216.md  E220.md  E249.md  E250.md  E251.md  E252.md  E320.md  E321.md  E443.md  E924.md  E950.md  E951.md  E952.md  E954.md  E955.md
docs/: RUBRIC.md  SUBMISSION.md  TECH_DESIGN.md  deliverables.md
evals/: gold.jsonl  results.json
scripts/: ask.py  backfill_images.py  build_briefs.py  build_index.py  build_spine.py  eval_answers.py  eval_retrieval.py  load_products.py
src/label_lens/: config.py  db.py  llm.py  schema.sql  slice.py
src/label_lens/agent/: graph.py  live.py  memory.py  store.py  tools.py  trace.py
src/label_lens/briefs/: assemble.py  generate.py
src/label_lens/etl/: eu.py  fda.py  iarc.py  off_products.py  off_taxonomy.py  prop65.py  regulatory_seed.py  spine.py  wikidata.py
src/label_lens/eval/: corpus.py  gold.py  judge.py  metrics.py  rag_pipeline.py  ragas_eval.py  retrievers.py  run.py
src/label_lens/rag/: chunk.py  embed.py  index.py  retrieve.py
tests/: test_app.py  test_briefs.py  test_chunk.py  test_concurrency.py  test_gold.py  test_memory.py  test_metrics.py  test_spine.py  test_store.py  test_trace.py
