[project]
name = "label-lens"
version = "0.1.0"
description = "Food-additive intelligence RAG app (AIEC capstone)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.4",
    "langgraph>=1.2.8",
    "langsmith>=0.10.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ragas>=0.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/label_lens"]
